--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
         </div>
         <ul class="social">
           <li>
-            <a href="https://twitter.com/nolansym?lang=en">
+            <a href="https://twitter.com/nolansym?lang=en" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li>
-            <a href="https://github.com/Jordan-Gilliam">
+            <a href="https://github.com/Jordan-Gilliam" target="_blank">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/jordan-gilliam-a624b0150/">
+            <a href="https://www.linkedin.com/in/jordan-gilliam-a624b0150/" target="_blank">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
