--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             Get in touch
           </a>
         </div>
-        <div class="portfolio">
-          <a class="button" href="portfolio.html">
-            Portfolio
-          </a>
-        </div>
+        <!--<div class="portfolio">-->
+        <!--  <a class="button" href="portfolio.html">-->
+        <!--    Portfolio-->
+        <!--  </a>-->
+        <!--</div>-->
         <ul class="social">
           <li>
             <a href="https://twitter.com/nolansym?lang=en" target="_blank">
