--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <figure id="picture" class="picture">
           <div class="picture-shadow"></div>
           <img id="pictureImage" class="picture-image"
-               src="images/portfolioJordan.jpg"
-               srcset="images/portfolioJordan.jpg 1x,
-                       images/portfolioJordan.jpg 2x,
-                       images/portfolioJordan.jpg 3x"
+               src="images/jpg2png/portfolioJordan.png"
+               srcset="images/jpg2png/portfolioJordan.png 1x,
+                       images/jpg2png/portfolioJordan.png 2x,
+                       images/jpg2png/portfolioJordan.png 3x"
                alt="Portrait of Jordan Gilliam"
                width="320"
                height="320">
