--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
                                </div>
 
                                <div class="home">
-                                    <a class="button" href="index.html">
+                                    <a class="button" href="https://jordangilliam.netlify.com/">
                                       Home
                                     </a>
                                     
