fixed animation bug

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
                                </div>
 
                                <div class="home">
-                                    <a class="button" href="https://jordangilliam.netlify.com/">
+                                    <a class="button" href="index.html">
                                       Home
                                     </a>
                                     
