--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <meta http-equiv="no-cache"> 
     <title>Jordan Gilliam - Full Stack MERN Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
      <!-- Compiled and minified CSS -->
@@ -115,9 +114,9 @@
                                </div>
 
                                <div class="home">
-                                    <a class="button" href="index.html">
+                                  <a class="button" onclick="window.location.reload()" href="./index.html">
                                       Home
-                                    </a>
+                                  </a>
                                     
                                     
 
