--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <hr class="hr">
         <div class="description">
           <p>
-            Im a soccer fanatic who loves all things tech.
+            I'm a soccer fanatic who loves all things tech.
             Currently focusing on React and React Native.
-            Never stop learning.
+            Always learning.
           </p>
         </div>
         <div class="contact">
