--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                   <p>Making group travel easy. This app allows users to create travel groups and track the location of members in that group. Use Convoy on your next roadtrip to avoid texting and calling your friends to see where they are!</p>
                 </div>
                 <div class="card-action">
-                  <a href="#">This is a link</a>
+                  <a href="https://warm-woodland-20139.herokuapp.com/">This is a link</a>
                 </div>
               </div>
             </div>
@@ -53,7 +53,7 @@
                       <p>A central place for music. Search for artists get results from spotify, ticketmaster, and youtube. We used firebase to store recent searches so you can see what music people are listening to.</p>
                     </div>
                     <div class="card-action">
-                      <a href="#">This is a link</a>
+                      <a href="https://jordan-gilliam.github.io/SpotifyWebApp/Project%201/index.html">MusicHub</a>
                     </div>
                   </div>
                 </div>
@@ -66,7 +66,7 @@
                           <p>a web scraper that lets users view and leave comments on the latest articles from r/programming.</p>
                         </div>
                         <div class="card-action">
-                          <a href="#">This is a link</a>
+                          <a href="https://github.com/Jordan-Gilliam/SocialNews">Web Scraper</a>
                         </div>
                       </div>
                     </div>
@@ -81,7 +81,7 @@
                               <p>airbnb- but with bitcoin. This app lets users sign in as a host or as a customer. You can view listings and rent using bitcoin.</p>
                             </div>
                             <div class="card-action">
-                              <a href="#">This is a link</a>
+                              <a href="https://github.com/Jordan-Gilliam/airbnbit">Airbnbit</a>
                             </div>
                           </div>
                         </div>
@@ -94,7 +94,7 @@
                                    <p>A train scheduler built using mySQL node.js and Express.js.</p>
                                  </div>
                                  <div class="card-action">
-                                   <a href="https://jordan-gilliam.github.io/Train-Scheduler/">This is a link</a>
+                                   <a href="https://jordan-gilliam.github.io/Train-Scheduler/">SQL Train</a>
                                  </div>
                                </div>
                              </div>
@@ -107,7 +107,7 @@
                                        <p>A blog but for talking about apps in depth. I built casestudy hub using React.js and Gatsby.</p>
                                      </div>
                                      <div class="card-action">
-                                       <a href="#">This is a link</a>
+                                       <a href="https://casestudyhub.netlify.com/">Case Study</a>
                                      </div>
                                    </div>
                                  </div>
